# PDESolver

./: AnimateVisualize.py  CMakeLists.txt  HyperbolicEQ.cpp  HyperbolicEQ.h  ParabolaPDE.cpp  ParabolaPDE.h  PoissonEQ.cpp  PoissonEQ.h  README.md  Read.py  Visual.py  VisualizeMain.py  VisualizeMain.spec  main.cpp  polygon_boundary.cpp  polygon_boundary.h  sparse_matrix.cpp  sparse_matrix.h
Testing Report/testv1.2/: test.aux  test.tex
Testing Report/testv2.3/: test.aux  test.tex
Testing Report/testv3.1/: test.tex
Testing Report/testv3.2/: Error test.xlsx  test.aux  test.tex
Testing Report/testv3.3/Parabola/: Error test.xlsx  test.aux  test.tex
Testing Report/testv3.3/Poisson/: error.xlsx  test.aux  test.tex
doc/: Doxyfile  readme.md
